--- a/shipping/Dockerfile
+++ b/shipping/Dockerfile
@@ -12,4 +12,4 @@ WORKDIR /opt/shipping
 ENV CART_ENDPOINT=cart:8080
 ENV DB_HOST=mysql
 COPY --from=build /opt/shipping/target/shipping-1.0.jar shipping.jar
-CMD ["java","-xmn256m","-xmx768m","jar","shipping.jar"]
+CMD ["java","-Xmn256m","-Xmx768m","-jar","shipping.jar"]
