--- a/payment/Dockerfile
+++ b/payment/Dockerfile
@@ -8,4 +8,4 @@ COPY requirements.txt /app/
 RUN pip install -r requirements.txt
 COPY *.py /app/
 COPY payment.ini /app/
-CMD ["uwsgi","-ini","payment.ini"]
+CMD ["uwsgi","--ini","payment.ini"]
